--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 3
         versionName "v3"
@@ -121,14 +121,18 @@ dependencies {
     implementation 'de.psdev.licensesdialog:licensesdialog:2.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.opencsv:opencsv:3.10'
+
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.fmsirvent:parallaxeverywhere:1.0.4'
     implementation 'com.lapism:searchview:4.0'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
     implementation 'com.robinhood.ticker:ticker:2.0.2'
      implementation 'com.google.android.gms:play-services-ads:19.1.0'
-
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 }
 
 task applyVersionToReadme() {
