--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
 
+
     implementation "com.j256.ormlite:ormlite-core:$ormLite"
     implementation "com.j256.ormlite:ormlite-android:$ormLite"
     implementation "net.danlew:android.joda:$jodaTime"
@@ -124,14 +125,14 @@ dependencies {
 
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.fmsirvent:parallaxeverywhere:1.0.4'
     implementation 'com.lapism:searchview:4.0'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
     implementation 'com.robinhood.ticker:ticker:2.0.2'
-     implementation 'com.google.android.gms:play-services-ads:19.1.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 }
 
